--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -174,6 +174,7 @@ header {
 
 			@media screen and (max-width: 992px) {
 				width: unset;
+				margin-top: 3rem;
 			}
 			.hero-image {
 				max-width: 100%;
